# simple-game

./: CMakeLists.txt  settings.json
include/: grid_component.hpp  simple_game.hpp
src/: main.cpp  simple_game.cpp
